...
        android:textColor="@color/primary_blue"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_add_policy" />

    <!-- Add Button -->

    <!-- Search Bar -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
            android:textColorHint="@color/primary_blue"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/policyRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
