<?xml version="1.0" encoding="utf-8"?>



<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/policyCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/policyNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary_blue"
            android:fontFamily="@font/opensans"
            android:layout_marginBottom="6dp" />

        <TextView
            android:id="@+id/policyDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#666666"
            android:lineSpacingExtra="4dp"
            android:fontFamily="@font/opensans"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

